# BreakOut_exercise

./: CMakeLists.txt  README.md  breakout.sln
breakout/: breakout.vcxproj  breakout.vcxproj.filters
breakout/include/breakout/assets/: asset_manager.h  asset_paths.h
breakout/include/breakout/core/: ball_object.h  game.h  game_level.h  game_object.h  power_up.h
breakout/include/breakout/rendering/: particle_generator.h  post_processor.h  shader.h  sprite_renderer.h
breakout/src/: game.cpp  game.h  glad.c  particle_generator.cpp  post_processor.cpp
breakout/src/app/: main.cpp
breakout/src/assets/: asset_manager.cpp  asset_paths.cpp
breakout/src/core/: ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp
breakout/src/rendering/: particle_generator.cpp  post_processor.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
enc_temp_folder/4cdaa59167fa34f5621b16518767faae/: game.cpp
enc_temp_folder/96dcaa709660d422056b33a6240cebc/: game.cpp
